Fixed: Increase width and truncate long names on Import List Exclusions
(cherry picked from commit 2d0541c03b761a0ec5e10711d6bd577e07141517)

--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
@@ -8,7 +8,7 @@
 }
 
 .name {
-  flex: 1 0 300px;
+  flex: 1 0 600px;
 }
 
 .foreignId {
